[package]
name = "instagram-matrix-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Matrix Bee Team"]
description = "🐝 Analyze Instagram followers to find non-mutual follows with matrix-bee aesthetics"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.25"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
open = "5.0"
copypasta = "0.10"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.8"
